--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,17 @@
 *.exe
 *.out
 *.app
+
+# Build files
+atomic_configure
+bin
+catkin
+catkin_generated
+CMakeFiles
+devel
+gtest
+*.cmake
+*.ini
+test_results
+edge_detection/CMakeCache.txt
+edge_detection/Makefile
