--- a/edge_detection/CMakeLists.txt
+++ b/edge_detection/CMakeLists.txt
@@ -13,6 +13,7 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   sensor_msgs
   message_generation
+  message_filters
   cv_bridge
   OpenCV REQUIRED 
 )
